# eduverse

./: README.md
edumaster/: package-lock.json  package.json
edumaster/src/: App.vue  index.css  main.ts
edumaster/src-tauri/: tauri.conf.json
edumaster/src/layouts/: auth.vue
edumaster/src/router/: index.ts
eduverse/: package-lock.json  package.json  vite.config.ts
eduverse/src/: App.vue  index.css  main.ts
eduverse/src-tauri/: Cargo.toml  tauri.conf.json
eduverse/src-tauri/src/: lib.rs  main.rs
eduverse/src-tauri/src/db/: mod.rs  models.rs  repository.rs
eduverse/src/components/: PageTransition.vue  SplashScreen.vue
eduverse/src/components/inc/: Logo.vue
eduverse/src/components/layout/: Sidebar.vue  TopBar.vue
eduverse/src/components/students/: StudentAnalyticsTab.vue  StudentAttendanceTab.vue  StudentDocumentsTab.vue  StudentFinanceTab.vue  StudentGradesTab.vue  StudentGuardiansTab.vue  StudentProfileTab.vue  StudentSchoolPathTab.vue  (+1 more)
eduverse/src/composables/: index.ts  useForm.ts  useLayout.ts  useToast.ts
eduverse/src/layouts/: auth.vue  default.vue  workspace.vue
eduverse/src/router/: index.ts
eduverse/src/services/: activation.service.ts  auth.service.ts  class.service.ts  dashboard.service.ts  guardian.service.ts  index.ts  school-year.service.ts  student.service.ts  unified.service.ts
eduverse/src/stores/: auth.store.ts  class.store.ts  dashboard.store.ts  school-year.store.ts  student.store.ts
eduverse/src/types/: auth.ts  class.ts  dashboard.ts  school-year.ts  student.ts
eduverse/src/utils/: menu.ts  validation.ts
(+33 files in other folders)
