[package]
name = "eduverse"
version = "0.1.0"
description = "Eduverse - Logiciel de gestion d'école"
authors = ["you"]
edition = "2021"

[lib]
name = "eduverse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
thiserror = "2.0"
once_cell = "1.19"

